# PTFS

./: CMakeLists.txt  LICENSE  Makefile.am  README  REUSE  autogen.sh  configure.ac
aurochs/: .hg_archival.txt  .hgtags
aurochs/aurochs/: compiler.ml
aurochs/cnog/: cnog.c
aurochs/examples/astsaver/: astsaver.ml
examples/: arith.peg  grammar  ocamldep.peg  ocamlpdep.peg  ocamlpdep.rb  texdep.peg  texdep.rb  text
m4/: ocaml.m4
man/: ptfs.1
src/: CMakeLists.txt  Makefile  Makefile.am  compilewrap.c  earley.c  fuse_ops.c  get_node.c  parse.c  pt.h  ptfs.c  ptfs.h  read.c  read.h  rw.c  sgramm.c  sgramm.y
src/aurochs/: Makefile.in  aurochs.ml  aurochs_native.c  genmachine.ml  grammar.ml  grammar.mli
